--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,34 @@
 {
   "name": "client",
   "version": "1.0.0",
+  "private": true,
   "description": "",
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-css-only": "^4.3.1",
+    "react": "^16.8.2",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.2",
+    "react-scripts": "2.1.5",
+    "typeface-roboto": "0.0.54"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@material-ui/core": "^3.9.2"
-  }
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
